--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,6 +26,8 @@
 			<h1>Scott Klemmer</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 			<p class="facebookLogin">Please login through Facebook</p>
+			<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+			</fb:login-button>
 		</div>
 
 		<div id="facebookPhoto" class="profile">
@@ -52,5 +54,7 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
+	{{> facebook}}
+	<script src="/js/facebook.js"></script>
 </body>
 </html>
